--- a/app/src/main/res/layout/new_job_req_layout.xml
+++ b/app/src/main/res/layout/new_job_req_layout.xml
@@ -8,46 +8,27 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:weightSum="3">
-
+        android:weightSum="1">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/viewA"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
-            android:gravity="center_vertical|center_horizontal"
-            android:focusable="true" android:focusableInTouchMode="true">
-
+            android:layout_weight="0.5"
+            android:gravity="center_vertical|center_horizontal">
             <com.google.android.gms.maps.MapView
                 android:id="@+id/mapview"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent" />
         </LinearLayout>
-
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/viewB"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:background="@drawable/transition"
-            android:gravity="center_vertical|center_horizontal">
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="horizontal">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/text_input_layout_view"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:layout_below="@+id/mapview"
-                android:visibility="invisible"
-                android:gravity="center_vertical|center_horizontal">
-
-                <EditText
-                    android:id="@+id/postcode"
-                    android:layout_width="400dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter Delivery Postcode"
-                    android:inputType="textEmailAddress"
-                    android:gravity="center_horizontal"/>
-            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </LinearLayout>
 
@@ -59,5 +40,6 @@
         android:clickable="true"
         android:src="@drawable/ic_store_white_48dp"
         app:layout_anchor="@id/viewA"
-        app:layout_anchorGravity="bottom|right|end" />
+        app:layout_anchorGravity="bottom|right|end"/>
+
 </android.support.design.widget.CoordinatorLayout>
