--- a/app/src/main/res/layout/activity_service_selector.xml
+++ b/app/src/main/res/layout/activity_service_selector.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,10 +12,10 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
             <include layout="@layout/fragment_app_bar" />
         </android.support.design.widget.AppBarLayout>
 
@@ -25,16 +23,15 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:layout_below="@id/app_bar"
+            android:layout_marginTop="60dp"
             android:paddingBottom="@dimen/activity_vertical_margin"
             tools:context=".MyActivity">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/service_selector_rv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 
