--- a/app/src/main/res/layout/cardv_service_selector.xml
+++ b/app/src/main/res/layout/cardv_service_selector.xml
@@ -1,58 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="4dp">
+    android:background="@color/primary"
+    card_view:cardCorenerRadius="3dp"
+    card_view:cardElevation="40dp"
+    card_view:cardBackgroundColor="@color/primary">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/primary">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/cardview_dark_background"
-            android:gravity="center_vertical"
-            android:text="contact det"
-            android:textColor="@android:color/white"
-            android:textSize="14dp" />
+        <ImageView
+            android:id="@+id/ic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="false"
+            android:src="@drawable/ic_emoticon"
+            android:layout_centerInParent="true" />
 
         <TextView
             android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_below="@id/ic"
             android:gravity="center_vertical"
             android:text="Name"
-            android:textSize="10dp" />
-
-        <TextView
-            android:id="@+id/txtSurname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/txtName"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            android:text="Surname"
-            android:textSize="10dp" />
-
-        <TextView
-            android:id="@+id/txtEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/txtName"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="150dp"
-            android:layout_marginTop="10dp"
-            android:text="Email"
-            android:textSize="10dp" />
+            android:textSize="10dp"
+            android:textColor="#ffffff"
+            android:layout_centerInParent="true" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
