--- a/app/src/main/res/layout/activity_service_selector.xml
+++ b/app/src/main/res/layout/activity_service_selector.xml
@@ -32,6 +32,13 @@
                 android:id="@+id/service_selector_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 
