--- a/app/src/main/res/layout/activity_new_job_details.xml
+++ b/app/src/main/res/layout/activity_new_job_details.xml
@@ -110,8 +110,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="Request Service"
-                    android:id="@+id/button2"
-                    android:layout_gravity="center_horizontal" />
+                    android:id="@+id/request_service"
+                    android:layout_gravity="center_horizontal"
+                    android:enabled="false"/>
 
 
             </LinearLayout>
