--- a/app/src/main/res/layout/job_queue_list_row.xml
+++ b/app/src/main/res/layout/job_queue_list_row.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="16dp"
+    android:orientation="horizontal"
+    android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="56dp">
+    android:layout_height="56dp"
+    android:weightSum="100"
+    android:elevation="10dp"
+    android:gravity="center_vertical">
 
     <TextView
-        android:id="@+id/list_item"
+        android:id="@+id/job_item"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="70"
+        android:hint="Job Id" />
+    <TextView
+        android:id="@+id/job_item_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="30"
+        android:hint="Status"
+        android:gravity="right"
+        android:textSize="12dp" />
 
 </LinearLayout>
