--- a/app/src/main/res/layout/activity_new_job_details.xml
+++ b/app/src/main/res/layout/activity_new_job_details.xml
@@ -34,7 +34,7 @@
                 android:gravity="center_vertical|center_horizontal">
 
                 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/jobdetails_map"
+                    android:id="@+id/jobdetails_map_new"
                     android:name="com.google.android.gms.maps.MapFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
