--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,17 +48,17 @@
                 android:paddingTop="20dp">
 
                 <Button
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
                     android:text="REQUEST SERVICE"
                     android:id="@+id/request_service"
                     android:layout_gravity="center_horizontal"
-                    android:background="@color/primary_dark"
+                    android:background="@color/accent"
                     android:elevation="20dp"
                     android:textColor="#ffffff" />
                 <Button
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="20dp"
                     android:text="INVITE FRIENDS"
                     android:id="@+id/app_invite"
@@ -69,15 +69,6 @@
             </LinearLayout>
         </LinearLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:clickable="true"
-            android:src="@drawable/ic_refresh_white_36dp"
-            app:layout_anchor="@id/viewA"
-            app:layout_anchorGravity="bottom|right|end" />
     </android.support.design.widget.CoordinatorLayout>
 
     <include layout="@layout/fragment_navigation_view" />
