--- a/app/src/main/res/layout/activity_new_job_details.xml
+++ b/app/src/main/res/layout/activity_new_job_details.xml
@@ -96,8 +96,10 @@
 
                 </LinearLayout>
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
+                    android:background="@color/accent"
+                    android:textColor="#FFFFFF"
                     android:layout_marginTop="20dp"
                     android:text="Request Service"
                     android:id="@+id/request_service"
