--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -2,13 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/notifications"
+        android:icon="@drawable/ic_notifications_active_24dp"
+        android:title="@string/action_job_summary"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/action_job_summary"
-        android:icon="@drawable/ic_emoticon"
+        android:icon="@drawable/ic_list_24dp"
         android:title="@string/action_job_summary"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_service_selector"
-        android:icon="@drawable/ic_pageview_white_36dp"
+        android:icon="@drawable/ic_settings_24dp"
         android:title="@string/action_service_selector"
         app:showAsAction="ifRoom"/>
 
