--- a/app/src/main/res/layout/activity_new_job_details.xml
+++ b/app/src/main/res/layout/activity_new_job_details.xml
@@ -75,13 +75,13 @@
                             android:popupBackground="@color/primary_dark"/>
                     </android.support.design.widget.TextInputLayout>
 
-                    <!--ImageButton
+                    <ImageButton
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="20"
                         android:id="@+id/address_search_btn"
                         android:src="@drawable/ic_search_white_18dp"
-                        android:layout_gravity="right"/-->
+                        android:layout_gravity="right"/>
                 </LinearLayout>
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="fill_parent"
