--- a/app/src/main/res/layout/pending_jobs_child.xml
+++ b/app/src/main/res/layout/pending_jobs_child.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#cbcbcb">
+    android:background="#cbcbcb"
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/child_list_item_crime_date_text_view"
+        android:id="@+id/child_list_item_delivery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="Job Details" />
-
-    <!--CheckBox
-        android:id="@+id/child_list_item_crime_solved_check_box"
+        android:text="Delivery Address"
+        android:layout_gravity="center_vertical" />
+    <TextView
+        android:id="@+id/child_list_item_delivery_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="8dp"/-->
+        android:padding="8dp"
+        android:textSize="10dp"
+        android:text="Delivery Date"
+        android:layout_gravity="center_vertical" />
 
-</RelativeLayout>
+
+</LinearLayout>
