--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                     android:layout_gravity="center_horizontal"
                     android:background="@color/accent"
                     android:elevation="20dp"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000"/>
                 <Button
                     android:layout_width="150dp"
                     android:layout_height="40dp"
